nivasa-macros/tests/trybuild/filter_catch_invalid.stderr
error: unexpected end of input, expected identifier
 --> tests/trybuild/filter_catch_invalid.rs:3:1
  |
3 | #[catch()]
  | ^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `catch` (in Nightly builds, run with -Z macro-backtrace for more info)
