nivasa-macros/tests/trybuild/filter_catch_invalid.rs
use nivasa_macros::catch;

#[catch()]
struct BrokenFilter;

fn main() {}
